--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <h1 id="city"></h1>
             <h2 id="temperature"></h2>
             <div class="flex">
-                <div class="weather-description">
+                <div class="weather_description">
                     <h3 id="weather_description"></h3>
                 </div>
                 <img id="icon">
