--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="app">
         <div class="search">
             <form id="city_form" name="myForm" action="" method="post">
-                <input id="city_name" type="text" name="cname" class="text-white" placeholder="Search for a city">
+                <input id="city_name" type="text" name="cname" class="text-white" placeholder="Search for a city" requierd>
                 <button id="submit_city" class="btn btn-danger btn-lg w-45" type="submit">SUBMIT</button>
             </form>
         </div>
