--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="app">
         <div class="search">
             <form id="city_form" name="myForm" action="" method="post">
-                <input id="city_name" type="text" name="cname" class="text-white" placeholder="Search for a city" requierd>
+                <input id="city_name" type="text" name="cname" class="text-white" placeholder="Search for a city" required>
                 <button id="submit_city" class="btn btn-danger btn-lg w-45" type="submit">SUBMIT</button>
             </form>
         </div>
@@ -42,6 +42,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="main.js"></script>
 
 </body>
