--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <div class="app">
         <div class="search">
             <form id="city_form" name="myForm" action="" method="post">
-                <input id="city_name" type="text" name="cname" class="text-white" placeholder="Search for a city" required>
+                <input id="city_name" type="text" name="cname" class="text-white" placeholder="Search for a city"
+                    required>
                 <button id="submit_city" class="btn btn-danger btn-lg w-45" type="submit">SUBMIT</button>
             </form>
         </div>
@@ -34,6 +35,10 @@
             </div>
             <div>
                 <h5 id="humidity"></h5>
+            </div>
+            <HR>
+            <div>
+                <span id="date"></span>&nbsp;<span id="today"></span>
             </div>
         </div>
     </div>
